--- a/airline/airline-client/src/app/flights/return-flight/return-flight.component.html
+++ b/airline/airline-client/src/app/flights/return-flight/return-flight.component.html
@@ -1,4 +1,6 @@
-<app-airports [flightDetails]="flightDetails"></app-airports>
-<app-date-selector [dateTitle]="'Departure Date'" (forwardDate)="addForwardDate($event)"></app-date-selector>
-<app-date-selector [dateTitle]="'Return Date'" (returnDate)="addReturnDate($event)" #returnDate></app-date-selector>
-<button mat-button type="submit" (click)="setReturnFlightDetails()">Submit</button>
+<div class="card-content">
+  <app-airports [flightDetails]="flightDetails"></app-airports>
+  <app-date-selector [dateTitle]="'Departure Date'" (forwardDate)="addForwardDate($event)"></app-date-selector>
+  <app-date-selector [dateTitle]="'Return Date'" (returnDate)="addReturnDate($event)" #returnDate></app-date-selector>
+  <button mat-button type="submit" (click)="setReturnFlightDetails()" class="card-button">Submit</button>
+</div>
