--- a/airline/airline-client/src/app/flights/airports/airport-selector/airport-selector.component.html
+++ b/airline/airline-client/src/app/flights/airports/airport-selector/airport-selector.component.html
@@ -1,4 +1,4 @@
-<mat-form-field>
+<mat-form-field class="card-field">
   <mat-label>{{formLabel}}</mat-label>
   <input matInput [formControl]="airportNameControl" [matAutocomplete]="airportNameOptions" (focus)="filterOptions()">
   <mat-autocomplete #airportNameOptions (optionSelected)="sendSelection($event)">
