--- a/airline/airline-client/src/app/flights/date-selector/date-selector.component.html
+++ b/airline/airline-client/src/app/flights/date-selector/date-selector.component.html
@@ -1,6 +1,9 @@
-<mat-form-field>
-  <input matInput [matDatepicker]="flightDate" [min]="dateToday()" [placeholder]="dateTitle"
-         [formControl]="dateControl" (dateChange)="setDate($event)" (click)="flightDate.open()">
-  <mat-datepicker-toggle matSuffix [for]="flightDate"></mat-datepicker-toggle>
-  <mat-datepicker #flightDate></mat-datepicker>
-</mat-form-field>
+<div>
+  <mat-form-field class="card-field">
+    <mat-label>{{dateTitle}}</mat-label>
+    <input matInput [matDatepicker]="flightDate" [min]="dateToday()"
+           [formControl]="dateControl" (dateChange)="setDate($event)" (click)="flightDate.open()">
+    <mat-datepicker-toggle matSuffix [for]="flightDate"></mat-datepicker-toggle>
+    <mat-datepicker #flightDate></mat-datepicker>
+  </mat-form-field>
+</div>
