--- a/airline/airline-client/src/app/booking-order/booking-order.component.html
+++ b/airline/airline-client/src/app/booking-order/booking-order.component.html
@@ -1,1 +1,37 @@
-<p>booking-order works!</p>
+<div class="content-container">
+  <mat-toolbar color="accent">Order Details</mat-toolbar>
+  <mat-card>
+    <mat-card-header>
+      <mat-card-title></mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <app-destination [flightResource]="forwardFlight"></app-destination>
+    </mat-card-content>
+    <mat-card-content *ngIf="returnFlight != null">
+      <app-destination [flightResource]="returnFlight"></app-destination>
+    </mat-card-content>
+    <div class="flight-details-text-normal secondary">
+      <div>Total: {{getTotal() | currency: '£'}}</div>
+    </div>
+    <mat-divider></mat-divider>
+    <mat-card-content class="content">
+      <form [formGroup]="formGroup">
+        <mat-form-field appearance="outline" class="form-field">
+          <input type="text" matInput formControlName="passportNumber" placeholder="Passport Number">
+        </mat-form-field>
+        <mat-form-field appearance="outline" class="form-field">
+          <input type="text" matInput formControlName="paymentCardName" placeholder="Credit Card Name">
+        </mat-form-field>
+        <mat-form-field appearance="outline" class="form-field">
+          <input type="text" matInput formControlName="paymentCardNumber" placeholder="Credit Card Number">
+        </mat-form-field>
+        <div>
+          <button class="primary-button" type="submit" mat-button (click)="processPayment()" [disabled]="!formGroup.valid">Place Order</button>
+          <div class="divider"></div>
+          <button class="primary-button" (click)="cancelOrder()" mat-button>Cancel Order</button>
+        </div>
+      </form>
+    </mat-card-content>
+  </mat-card>
+</div>
+<app-nav-footer class="booking-footer"></app-nav-footer>
