--- a/airline/airline-client/src/app/flights/airports/airport-selector/airport-selector.component.html
+++ b/airline/airline-client/src/app/flights/airports/airport-selector/airport-selector.component.html
@@ -1,6 +1,5 @@
-<mat-form-field class="card-field">
-  <mat-label>{{formLabel}}</mat-label>
-  <input matInput [formControl]="airportNameControl" [matAutocomplete]="airportNameOptions" (focus)="filterOptions()">
+<mat-form-field appearance="outline" class="form-field">
+  <input matInput [formControl]="airportNameControl" [matAutocomplete]="airportNameOptions" (focus)="filterOptions()" [placeholder]="formLabel">
   <mat-autocomplete #airportNameOptions (optionSelected)="sendSelection($event)">
     <mat-option *ngFor="let option of options | async" [value]="option">
       {{option}}
