--- a/airline/airline-client/src/app/flights/flight-selector/destination/destination.component.html
+++ b/airline/airline-client/src/app/flights/flight-selector/destination/destination.component.html
@@ -1,16 +1,30 @@
-<div>
-  <div>Duration: {{getDuration()}}</div>
-  <div>
-    <div>
-      <div>Outbound</div>
+<div class="flight-details-container">
+  <div class="flight-details">
+    <div class="col-4">
+      <h4 class="flight-details-header">Outbound</h4>
+      <div class="flight-details-text-header">{{getDepartureAirport()}}</div>
       <div>{{getDepartureTime()}}</div>
-      <div>{{getDepartureAirport()}}</div>
     </div>
-    <div>
-      <div>Inbound</div>
+    <div class="col-4">
+      <h4 class="flight-details-header">
+        Duration
+      </h4>
+      <div class="flight-details-text-header">
+        {{getDuration()}} hours
+      </div>
+    </div>
+    <div class="col-4">
+      <h4 class="flight-details-header">Inbound</h4>
+      <div class="flight-details-text-header">{{getArrivalAirport()}}</div>
       <div>{{getArrivalTime()}}</div>
-      <div>{{getArrivalAirport()}}</div>
+    </div>
+    <div class="col-4">
+      <h4 class="flight-details-header">
+        Total
+      </h4>
+      <div class="flight-details-text-header">
+        {{getPrice() | currency: '£'}}
+      </div>
     </div>
   </div>
-  <div>{{getPrice() | currency: '£'}}</div>
 </div>
