--- a/airline/airline-client/src/app/navigation/nav-footer/nav-footer.component.html
+++ b/airline/airline-client/src/app/navigation/nav-footer/nav-footer.component.html
@@ -1,1 +1,7 @@
-<p>nav-footer works!</p>
+<mat-toolbar color="primary" class="footer">
+  <div class="footer-content">
+    <div class="footer-text"><button mat-button>Airline</button></div>
+    <div class="footer-text">Airline Client &copy; {{currentDate()}}</div>
+    <div></div>
+  </div>
+</mat-toolbar>
