--- a/airline/airline-client/src/app/navigation/nav-header/nav-header.component.html
+++ b/airline/airline-client/src/app/navigation/nav-header/nav-header.component.html
@@ -1,7 +1,5 @@
+<!--TODO create app logo and add to header above toolbar-->
 <mat-toolbar class="nav" color="primary">
-  <div class="nav-header">
-    <button mat-button>Airline</button>
-  </div>
   <div>
     <a mat-button routerLink="flights">Flights</a>
     <a mat-button [mat-menu-trigger-for]="accountMenu">Account</a>
