--- a/bookstore/client/src/app/login/login.component.scss
+++ b/bookstore/client/src/app/login/login.component.scss
@@ -2,15 +2,25 @@
   margin-top: 10px;
 }
 
-.app-content {
-  padding: 100px;
-  background-color: white;
+.login-content {
+  background-color: #cfcfcf;
   height: 100vh;
-  justify-content: center;
-  align-items: center;
+  width: 100%;
 }
 
-.form-group {
-  justify-content: center;
-  align-items: center;
+.card-header {
+  text-align: center;
+}
+
+.card {
+  min-width: 300px;
+  min-height: 400px;
+}
+
+.btn {
+  width: 100%;
+}
+
+.form-control {
+  margin: 2.6% auto;
 }
