--- a/airline/airline-client/src/app/flights/single-flight/single-flight.component.html
+++ b/airline/airline-client/src/app/flights/single-flight/single-flight.component.html
@@ -1,5 +1,7 @@
-<div class="card-content">
+<div class="tab-content">
   <app-airports [flightDetails]="flightDetails"></app-airports>
   <app-date-selector [dateTitle]="'Departure Date'" (forwardDate)="setDate($event)"></app-date-selector>
-  <button mat-button type="submit" (click)="setFlightDetails()" class="card-button">Submit</button>
+  <div>
+    <button mat-button type="submit" (click)="setFlightDetails()" class="primary-button">Submit</button>
+  </div>
 </div>
