--- a/airline/airline-client/src/app/login/login.component.html
+++ b/airline/airline-client/src/app/login/login.component.html
@@ -1,25 +1,27 @@
-<mat-toolbar color="primary" class="centered-content">
-  <span>Login</span>
-</mat-toolbar>
-<div class="app-form">
-  <mat-card>
-    <mat-card-content class="card-content">
+<div class="content-container">
+  <mat-toolbar color="accent">Login</mat-toolbar>
+  <mat-card class="card-form">
+    <mat-card-content>
       <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-        <mat-form-field class="login-field">
+        <mat-form-field class="form-field" appearance="outline">
           <mat-label>Username</mat-label>
           <input type="text" matInput formControlName="username">
         </mat-form-field>
-        <mat-form-field class="login-field">
+        <mat-form-field class="form-field" appearance="outline">
           <mat-label>Password</mat-label>
           <input matInput formControlName="password" type="password">
         </mat-form-field>
-        <button class="login-field card-button" type="submit" mat-button>Submit</button>
+        <div class="">
+          <button class="primary-button" type="submit" mat-button>Submit</button>
+        </div>
       </form>
     </mat-card-content>
     <mat-divider class="card-divider"></mat-divider>
-    <mat-card-content class="card-content">
-      <mat-label>{{registerLabel}}</mat-label>
-      <button class="login-field card-button" mat-button (click)="register()">Register</button>
+    <mat-card-content class="card-form-content">
+      <div>
+        <mat-label>{{registerLabel}}</mat-label>
+      </div>
+      <button class="primary-button" mat-button (click)="register()">Register</button>
     </mat-card-content>
   </mat-card>
 </div>
