--- a/airline/airline-client/src/styles.scss
+++ b/airline/airline-client/src/styles.scss
@@ -1,55 +1,128 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
+@import "~@angular/material/theming";
 
 * {
   padding: 0;
   margin: 0;
 }
 
-$center-margin: 0 auto;
-$primary: #3f51b5;
+$primary: mat-color($mat-indigo, 500);
+$primary-text: #fff;
+$off-primary: mat-color($mat-indigo, 50);
+$secondary: mat-color($mat-pink, 500);
 
-.centered-content {
-  margin: $center-margin;
-  justify-content: center;
+body {
+  background-color: $off-primary;
 }
 
-.content-header {
-  @extend .centered-content;
+.content-container {
+  max-width: 960px;
+  margin: 1.6% auto;
+  text-align: center;
 }
 
-.app-form {
-  width: 95%;
-  max-width: 800px;
-  margin: 20px auto;
+.flight-details-header {
+  color: $primary;
+  font-size: 120%;
+  font-weight: bold;
+  padding: 4% 0;
 }
 
-.card-label {
-  color: #283593;
-}
-.card-field {
-  min-width: 100%;
-}
-
-.card-button {
-  background: $primary;
-  color: white;
-  width: 100px;
-}
-
-.card-content {
-  @extend .app-form;
-  max-width: 85%;
-  padding: 15px 0;
-}
-
-.card-container {
-  margin: 20px auto;
-}
-
-.card-header {
+.primary-button {
   background-color: $primary;
-  color: #fff;
-  justify-content: center;
-  padding: 15px;
+  color: $primary-text;
+  width: 150px;
+  padding: 1.2% 1.3%;
+}
+
+.form-field {
+  min-width: 90%;
+  max-width: 80%;
+}
+
+.tab-content {
+  padding: 1.6%;
+  text-align: center;
+}
+
+.flight-price {
+  font-weight: bold;
+  color: $primary;
+  font-size: 110%;
+}
+
+.flight-details {
+  width: 100%;
+  display: inline-block;
+}
+
+.col-4 {
+  min-width: 25.0%;
+  max-width: 25.0%;
+  display: inline-block;
+  vertical-align: top;
+}
+
+.flight-details-text-header {
+  font-weight: bold;
+  margin: 1% 0 2%;
+}
+
+.flight-details-text-normal {
+  font-weight: normal;
+  padding: 1% 0 2%;
+}
+
+.secondary {
+  color: $secondary;
+  font-weight: bold;
+}
+
+.text-decoration-none {
+  font-weight: normal;
+}
+
+.card-form {
+  margin-top: 1.6%;
+}
+
+.card-form-content {
+  padding: 1.6% 0;
+
+  div {
+    margin-bottom: 1.6%;
+  }
+}
+
+.margin-right {
+  margin-right: 1.1%;
+}
+
+.divider {
+  display: inline-block;
+  width: 1.6%;
+  height: auto;
+}
+
+@media only screen and (max-width: 800px) {
+  .flight-details-text-header {
+    margin: 5% 0 10%;
+  }
+
+  .content-container {
+    max-width: 90%;
+  }
+}
+
+@media only screen and (max-width: 450px) {
+  .divider {
+    display: block;
+    padding: 1.6%;
+  }
+
+  .col-4 {
+    display: inline-block;
+    min-width: 50%;
+  }
 }
